Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45666

qtactiveqt: Compilation with mingw fails due to headersclean check

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.5.0
    • 5.5.0 Beta
    • ActiveX Support
    • None
    •  51cd3b8090c52cab0931e0ab8fab1d83ef914b1e (qtactiveqt/5.5, 24.4.2015, 5.5)

      mingw32-make[3]: Entering directory 'D:/dev/qt/5.5/mingw-builds-4.9.2-32/qtactiveqt/src/activeqt'
      g++ -c -pipe -fno-keep-inline-dllexport -g -std=c++0x -fno-exceptions -frtti -Wall -Wextra -DUNICODE -DQT_BUILD_AXBASE_LIB -D
      QT_BUILDING_QT -D_CRT_SECURE_NO_WARNINGS -D_USE_MATH_DEFINES -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -
      DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x040800 -DQT_NO_EXCEPTIONS -DQT_WIDGETS_LIB -
      DQT_GUI_LIB -DQT_CORE_LIB -Wall -Wextra -Werror -Woverloaded-virtual -Wshadow -Wundef -Wnon-virtual-dtor -Wpointer-arith -Wfo
      rmat-security -Wno-long-long -Wno-variadic-macros -pedantic-errors -Wchar-subscripts -Wcast-align -ID:\dev\qt\5.5\src\qtactiv
      eqt\src\activeqt -I. -ID:\dev\qt\5.5\mingw-builds-4.9.2-32\qtbase\include -ID:\dev\qt\5.5\mingw-builds-4.9.2-32\qtbase\includ
      e\ActiveQt -ID:\dev\qt\5.5\mingw-builds-4.9.2-32\qtbase\include\ActiveQt\5.5.0 -ID:\dev\qt\5.5\mingw-builds-4.9.2-32\qtbase\i
      nclude\ActiveQt\5.5.0\ActiveQt -Itmp -ID:\dev\qt\5.5\mingw-builds-4.9.2-32\qtbase\include\QtGui\5.5.0 -ID:\dev\qt\5.5\mingw-b
      uilds-4.9.2-32\qtbase\include\QtGui\5.5.0\QtGui -ID:\dev\qt\5.5\mingw-builds-4.9.2-32\qtbase\include\QtWidgets -ID:\dev\qt\5.
      5\mingw-builds-4.9.2-32\qtbase\include\QtGui -ID:\dev\qt\5.5\mingw-builds-4.9.2-32\qtbase\include\QtCore -I.moc\debug -ID:\de
      v\qt\5.5\src\qtbase\mkspecs\win32-g++  -DQT_NO_CAST_TO_ASCII=1 -DQT_NO_CAST_FROM_ASCII=1 -DQT_STRICT_ITERATORS -DQT_NO_URL_CA
      ST_FROM_STRING=1 -DQT_NO_CAST_FROM_BYTEARRAY=1 -DQT_NO_KEYWORDS=1 -DQT_USE_FAST_CONCATENATION -DQT_USE_FAST_OPERATOR_PLUS -Ds
      ignals=int -Dslots=int -Demit=public: -Dforeach=public: -Dforever=public: -xc++ D:\dev\qt\5.5\src\qtactiveqt\src\activeqt\con
      trol\qaxfactory.h -o .obj\debug\header_qaxfactory.o
      In file included from D:\dev\qt\5.5\mingw-builds-4.9.2-32\qtbase\include/QtCore/qobjectdefs.h:1:0,
                       from D:\dev\qt\5.5\mingw-builds-4.9.2-32\qtbase\include/QtCore/../../../../src/qtbase/src/corelib/kernel/qob
      ject.h:40,
                       from D:\dev\qt\5.5\mingw-builds-4.9.2-32\qtbase\include/QtCore/qobject.h:1,
                       from D:\dev\qt\5.5\mingw-builds-4.9.2-32\qtbase\include/QtCore/../../../../src/qtbase/src/corelib/plugin/qfa
      ctoryinterface.h:37,
                       from D:\dev\qt\5.5\mingw-builds-4.9.2-32\qtbase\include/QtCore/qfactoryinterface.h:1,
                       from D:\dev\qt\5.5\src\qtactiveqt\src\activeqt\control\qaxfactory.h:46:
      D:\dev\qt\5.5\mingw-builds-4.9.2-32\qtbase\include/QtCore/../../../../src/qtbase/src/corelib/kernel/qobjectdefs.h:158:32: err
      or: 'virtual const QMetaObject* QObject::metaObject() const' was hidden [-Werror=overloaded-virtual]
           virtual const QMetaObject *metaObject() const; \
                                      ^
      D:\dev\qt\5.5\mingw-builds-4.9.2-32\qtbase\include/QtCore/../../../../src/qtbase/src/corelib/kernel/qobject.h:108:5: note: in
       expansion of macro 'Q_OBJECT'
           Q_OBJECT
           ^
      D:\dev\qt\5.5\src\qtactiveqt\src\activeqt\control\qaxfactory.h:67:32: error:   by 'virtual const QMetaObject* QAxFactory::met
      aObject(const QString&) const' [-Werror=overloaded-virtual]
           virtual const QMetaObject *metaObject(const QString &key) const = 0;
                                      ^
      cc1plus.exe: all warnings being treated as errors
      

      This shows up in the CI e.g. in http://testresults.qt.io/ci/QtActiveQt_5.5_Integration/build_00017/win32-mingw491_developer-build_qtlibinfix_Windows_7/log.txt.gz

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes