Add virtual destructors to some classes.

Silence warnings by MinGW for QAxServerAggregate, QAxSignalVec,
QAxConnection, QClassFactory:
warning: deleting object of polymorphic class type '...' which has non-virtual destructor might cause undefined behavior [-Wdelete-non-virtual-dtor]

Task-number: QTBUG-45666
Change-Id: Id610094014699b95cba46119658da1b5005ff554
Reviewed-by: Andy Shaw <andy.shaw@digia.com>